objects/Obj1__c.object
<CustomObject>
    <fields>
        <fullName>f2__c</fullName>
        <label>f2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f3__c</fullName>
        <label>f3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f4__c</fullName>
        <label>f4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Obj1</label>
    <nameField>
        <label>Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>